; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_raddr2line.c_process_file.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/rsym/extr_raddr2line.c_process_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"An error occured loading '%s'\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @process_file(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 1, i32* %7, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i8* @load_file(i8* %8, i64* %6)
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @stderr, align 4
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %14)
  br label %22

16:                                               ; preds = %2
  %17 = load i8*, i8** %5, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @process_data(i8* %17, i64 %18)
  store i32 %19, i32* %7, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @free(i8* %20)
  br label %22

22:                                               ; preds = %16, %12
  %23 = load i32, i32* %7, align 4
  ret i32 %23
}

declare dso_local i8* @load_file(i8*, i64*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @process_data(i8*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
